<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Discount Calculator</string>
    <string name="action_settings">Settings</string>
    <string name="radio_button_option_1">10%</string>
    <string name="radio_button_option_2">25%</string>
    <string name="radio_button_option_3">50%</string>
    <string name="radio_button_option_4">Custom</string>
    <string name="text_listed_price">Listed Price</string>
    <string name="text_saved">You Saved</string>
    <string name="text_pay">You Pay</string>
    <string name="text_custom_seekbar">Custom</string>
    <string name="text_discount">Discount %</string>
    <string name="initial_saved">$ 0.00</string>
    <string name="initial_pay">$ 0.00</string>
    <string name="button_text_exit">Exit</string>
    <string name="hint_listed_price">Enter Listed Price</string>
    <string name="initial_custom_seek">25%</string>
    <string name="text_initial_custom_seek">25%</string>

</resources>
